Adapted pathway data structure to hold multiple genes properly - like agreed with Michael last week.
git-svn-id: svn://localhost:8080/caleydo_main/trunk@860 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3